--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,11 @@
   <body>
 	<%= render "layouts/header" %>
     <div class="container">
-	  <% flash.each do |key, value| %>
-		<div class="alert alert-<%= key %>" role="alert">
-		  <button type="button" class="close">&times;</button>
-		  <%= value %>
-		</div>
-	  <% end %>
+		<% flash.each do |key, value| %>
+			<div class="<%= flash_class(key) %>">
+				<%= value %>
+			</div>
+		<% end %>
 	  <%= yield %>
 	</div>
   </body>
