--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,16 +1,19 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
-<button type="button" class="btn btn-primary">Primary</button>
-<div class="dropdown">
-  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-    Dropdown
-    <span class="caret"></span>
-  </button>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-    <li><a href="#">Action</a></li>
-    <li><a href="#">Another action</a></li>
-    <li><a href="#">Something else here</a></li>
-    <li role="separator" class="divider"></li>
-    <li><a href="#">Separated link</a></li>
-  </ul>
-</div>
+<% provide(:title, "Homepage") %>
+
+<div class="jumbotron">
+    <h1>Welcome!</h1>
+    <p>
+      Here you can join tournaments and create your own!<br>
+      Remember to log in and create a team before joining any tournaments.
+    </p>
+    <p>
+      <% if user_signed_in? %>
+        <%= link_to "View your team page", "#", class: "btn btn-primary btn-lg", disabled: true %>
+      <% else %>
+        <%= link_to "Sign up" , new_user_registration_path, class: "btn btn-primary btn-lg" %>
+        <%= link_to new_user_session_path, class: "btn btn-primary btn-lg" do %>Log in <span class="glyphicon glyphicon-log-in"> <% end %>
+      <% end %>
+      <%= link_to "Tournaments", "#", class: "btn btn-primary btn-lg", disabled: true %>
+    </p>
+    
+  </div>
