--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,19 +1,28 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+      </button>
       <a class="navbar-brand" href="<%= root_path %>">Projekt</a>
     </div>
-    <ul class="nav navbar-nav">
-      <li><a href="<%= root_path %>">Home</a></li>
-    </ul>
-    <ul class="nav navbar-nav navbar-right">
-    <% if user_signed_in? %>
-      <li><%= link_to "Change password", edit_user_registration_path %> </li>
-      <li><%= link_to destroy_user_session_path, :method => :delete do %>Log out <span class="glyphicon glyphicon-log-out"> <% end %></li>
-    <% else %>
-      <li><%= link_to "Sign up" ,new_user_registration_path %></li>
-      <li><%= link_to new_user_session_path do %>Log in <span class="glyphicon glyphicon-log-in"> <% end %></li>
-    <% end %>
-    </ul>
+    <div class="collapse navbar-collapse" id="navbar">
+      <ul class="nav navbar-nav">
+        <li><a href="<%= root_path %>">Home</a></li>
+        <li><a href="<%= home_about_path %>">About project</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+      <% if user_signed_in? %>
+        <li><%= link_to "Change password", edit_user_registration_path %> </li>
+        <li><%= link_to destroy_user_session_path, :method => :delete do %>Log out <span class="glyphicon glyphicon-log-out"> <% end %></li>
+      <% else %>
+        <li><%= link_to "Sign up" ,new_user_registration_path %></li>
+        <li><%= link_to new_user_session_path do %>Log in <span class="glyphicon glyphicon-log-in"> <% end %></li>
+      <% end %>
+      </ul>
+    </div>
   </div>
 </nav>
