--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,13 +10,13 @@
 
   <body>
 	<%= render "layouts/header" %>
-    <div class="container-fluid">
-		<% flash.each do |key, value| %>
-			<div class="<%= flash_class(key) %>">
-				<%= value %>
-			</div>
-		<% end %>
-	  <%= yield %>
-	</div>
+    <main class="container-fluid">
+      <% flash.each do |key, value| %>
+        <div class="<%= flash_class(key) %>">
+          <%= value %>
+        </div>
+      <% end %>
+      <%= yield %>
+	  </main>
   </body>
 </html>
