Corrected spacing in "About project" page

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -8,8 +8,9 @@
     with not very popular systems:
     <li><a href="https://en.wikipedia.org/wiki/Swiss-system_tournament" target="_blank"><strong>Swiss system</strong></a> - group stage system,
       which is used for qualifications and sometimes to&nbsp;set seeds of&nbsp;participating teams. With proper seeding, this system seems to&nbsp;be
-      fair for everyone and makes it almost impossible to&nbsp;qualify for teams that upseted in&nbsp;a&nbsp;match, where they were underdogs.
-      <ul>Even with complicated graph used to&nbsp;show tournament status, rules are pretty simple:
+      fair for everyone and makes it almost impossible to&nbsp;qualify for teams that upseted in&nbsp;a&nbsp;match, where they were underdogs.<br>
+      Even with complicated graph used to&nbsp;show tournament status, rules are pretty simple:
+      <ul>
         <li>Win 3 matches to&nbsp;qualify</li>
         <li>Lose 3 matches to&nbsp;be disqulified</li>
         <li>All matches are between teams with the same record (i.e. team with 1 win and 2 losses can play only teams with same amount of&nbsp;wins and losses)</li>
