Fixed minor mistakes on "About project" page

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, "About project") %>
 
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-offset-1 col-lg-10 col-lg-offset-1">
-  <h1>About page</h1>
+  <h1>About project</h1>
   <h3>Purpose of the project</h3>
   <ul>
     Goal of&nbsp;this project is to&nbsp;make website allowing to&nbsp;create and participate in&nbsp;tournaments
@@ -21,7 +21,7 @@
        wrestling and curling. Similar to&nbsp;single-elimination system, but after losing one match, team is moved to&nbsp;lower bracket with a&nbsp;chance to&nbsp;comeback and reach the finals. 
        This system makes it harder for weaker teams to&nbsp;upset. Even with one surprice win there's a&nbsp;chance that both teams will meet each other again in&nbsp;finals or lower bracket.
        When single-elimination tournament would stop after finals, double-elimination waits for lower bracket to&nbsp;end and then both winners of&nbsp;upper and lower bracket play in&nbsp;championship finals. 
-       Depending on&nbsp;game and tournament organiser, most of&nbsp;the time winner of&nbsp;upper bracket have some kind of&nbsp;advantage. Most common way&nbsp;of&nbsp;it to&nbsp;give 1:0 score for upper bracket winners in best-of-3 finals, 
+       Depending on&nbsp;game and tournament organiser, most of&nbsp;the time winner of&nbsp;upper bracket have some kind of&nbsp;advantage. Most common way&nbsp;of&nbsp;it to&nbsp;give 1:0 score for upper bracket winners in best&#8209;of&#8209;3 finals, 
        with means that team from lower bracket needs to&nbsp;win two matches to&nbsp;win whole tournament, when other team needs only one win. Sometimes giving 1:0 score from the start is too much 
        (it can make finals too easy to&nbsp;predict), so&nbsp;instead of&nbsp;that, for example in video games, team without any loses can choose to&nbsp;be first or second in&nbsp;some kind of&nbsp;veto&nbsp;system, 
        used to&nbsp;choose a&nbsp;map or playable characters.
@@ -35,11 +35,11 @@
     Maybe gem that will be used: <a href="http://fabricjs.com/" target="_blank">Fabric.js</a> (canvas library for brackets)
   </p>
   <h3>ERD Diagram</h3>
-  <div style="overflow:auto;border:1px solid lightgrey">
+  <div class="about-image">
     <%= image_tag  "RubyOnRailsTournamentSystem_diagram_bazy_danych.png", style: "display:block;margin:auto"  %>
   </div>
   <h3>Class Diagram</h3>
-  <div style="overflow:auto;border:1px solid lightgrey">
+  <div class="about-image">
     <%= image_tag  "RubyOnRailsTournamentSystem_diagram_klas.png", style: "display:block;margin:auto"  %>
   </div>
   <h3>List of functionalities</h3>
