--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -17,13 +17,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :password %>
-    <%= f.text_field :password %>
-  </div>
-
-  <div class="field">
-    <%= f.label :leader_id %>
-    <%= f.number_field :leader_id %>
+    <%= f.label :encrypted_password %>
+    <%= f.text_field :encrypted_password %>
   </div>
 
   <div class="actions">
