--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -6,8 +6,7 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th>Password</th>
-      <th>Leader</th>
+      <th>Leader's username</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,8 +15,7 @@
     <% @teams.each do |team| %>
       <tr>
         <td><%= team.name %></td>
-        <td><%= team.password %></td>
-        <td><%= team.leader_id %></td>
+        <td><%= team.leader.username %></td>
         <td><%= link_to 'Show', team %></td>
         <td><%= link_to 'Edit', edit_team_path(team) %></td>
         <td><%= link_to 'Destroy', team, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -26,6 +24,8 @@
   </tbody>
 </table>
 
+<br>
+<%= current_user.team %>
 <br>
 
 <%= link_to 'New Team', new_team_path %>
