Added option to join existing team

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,6 +17,11 @@
       <ul class="nav navbar-nav navbar-right">
       <% if user_signed_in? %>
         <li><p class="navbar-text">Hello <strong><%= current_user.username %>!</strong></p></li>
+        <% if current_user.team.nil? %>
+          <li><%= link_to "Create/Join Team", new_team_path %> </li>
+        <% else %>
+          <li><%= link_to "My team", current_user.team %> </li>
+        <% end %>
         <li><%= link_to "Change password", edit_user_registration_path %> </li>
         <li><%= link_to destroy_user_session_path, :method => :delete do %>Log out <span class="glyphicon glyphicon-log-out"> <% end %></li>
       <% else %>
