--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -17,8 +17,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :encrypted_password %>
-    <%= f.text_field :encrypted_password %>
+    <%= f.label :password %>
+    <%= text_field_tag :password, nil, id: nil %>
   </div>
 
   <div class="actions">
