--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,8 @@
+/*
+*= require_self
+*= require_tree .
+*/
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
@@ -22,4 +27,12 @@ main.container-fluid{
 .about-image{
 	overflow:auto;
 	border:1px solid lightgrey;
+}
+
+.panel{
+	-webkit-box-shadow: 0px 10px 30px 5px rgba(0,0,0,0.55);
+	-moz-box-shadow: 0px 10px 30px 5px rgba(0,0,0,0.55);
+	box-shadow: 0px 10px 30px 5px rgba(0,0,0,0.55);
+	padding: 20px;
+	margin: 40px 0px 40px;
 }
