--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,6 +33,11 @@ main.container-fluid{
 	-webkit-box-shadow: 0px 10px 30px 5px rgba(0,0,0,0.55);
 	-moz-box-shadow: 0px 10px 30px 5px rgba(0,0,0,0.55);
 	box-shadow: 0px 10px 30px 5px rgba(0,0,0,0.55);
-	padding: 20px;
+	border-radius: 25px;
+	padding: 30px;
 	margin: 40px 0px 40px;
+}
+
+.has-error label{
+	color: #a94442;
 }
