--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="form-group">
     <%= f.label :password %>
-    <%= text_field_tag :password, nil, id: nil, class: 'form-control' %>
+    <%= password_field_tag :password, nil, id: nil, class: 'form-control' %>
   </div>
 
   <div class="actions">
