--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -20,7 +20,11 @@
                 
                 <div class="form-group">
                     <%= label_tag :password %>
-                    <%= text_field_tag :password, nil, id: nil, class: 'form-control' %>
+                    <%= password_field_tag :password, nil, id: nil, class: 'form-control' %>
+                </div>
+                <div class="form-group">
+                    <%= label_tag :password_confirmation %>
+                    <%= password_field_tag :password_confirmation, nil, id: nil, class: 'form-control' %>
                 </div>
                 <div class="actions">
                     <%= submit_tag 'Join team', class: 'btn btn-primary' %>
