--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -21,6 +21,11 @@
     <%= password_field_tag :password, nil, id: nil, class: 'form-control' %>
   </div>
 
+  <div class="form-group">
+      <%= label_tag :password_confirmation %>
+      <%= password_field_tag :password_confirmation, nil, id: nil, class: 'form-control' %>
+  </div>
+
   <div class="actions">
     <%= f.submit 'Create team', class: 'btn btn-primary' %>
   </div>
