--- a/app/views/tournaments/index.html.erb
+++ b/app/views/tournaments/index.html.erb
@@ -5,9 +5,9 @@
 <table>
   <thead>
     <tr>
-      <th>User</th>
       <th>Name</th>
       <th>Tournament type</th>
+      <th>Participants</th>
       <th>Start date</th>
       <th>Finished</th>
       <th colspan="3"></th>
@@ -17,9 +17,13 @@
   <tbody>
     <% @tournaments.each do |tournament| %>
       <tr>
-        <td><%= tournament.user_id %></td>
         <td><%= tournament.name %></td>
-        <td><%= tournament.tournament_type_id %></td>
+        <td><%= tournament.tournament_type.name %></td>
+        <td>
+          <% tournament.participants.each do |p| %>
+            <%= p.team.name %> <br>
+          <% end %>
+        </td>
         <td><%= tournament.start_date %></td>
         <td><%= tournament.finished %></td>
         <td><%= link_to 'Show', tournament %></td>
@@ -30,6 +34,6 @@
   </tbody>
 </table>
 
-<br>
 
+<br>
 <%= link_to 'New Tournament', new_tournament_path %>
