--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, "Edit User") %>
 
-  <div class="col-md-4 col-md-offset-4">
+  <div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
     <div class="panel panel-default">
       <h2>Edit
         <%= resource_name.to_s.humanize %>
