--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, "Sign up") %>
 
-	<div class="col-md-4 col-md-offset-4">
+	<div class="col-md-8 col-md-offset-2 col-lg-4 col-lg-offset-4">
 		<div class="panel panel-default">
 			<h2>Sign up</h2>
 			<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
