Fixed associations between classes

--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -38,7 +38,9 @@
   <%= @tournament.finished %>
 </div>
 
-<%= render 'tournaments/bracket-partials/single-elimination'%>
+<%-# add path to folder with partials and check type of tournament -%>
+<% s = 'tournaments/bracket-partials/'+@tournament.tournament_type.name.downcase %>
+<%= render s[0, s.length - 7]%>
 
 <% if @current_user_in_tournament %>
   <%= link_to 'Leave tournament', leave_tournament_path(@tournament), method: :post %>
