--- a/app/views/tournaments/bracket-partials/_single-elimination.html.erb
+++ b/app/views/tournaments/bracket-partials/_single-elimination.html.erb
@@ -1,61 +1,33 @@
-<div id="brackets">
-  <div class="round" id="round1">
+<div class="brackets">
+  <div class="round">
     <% for i in 0..7%>
-      <div class="match">
-        <div class="team">
-          <%= i %>
-        </div>
-        <div class="team">
-          <%= i %>
-        </div>
-      </div>
+    <%= render partial:'tournaments/bracket-partials/match', locals: {stage: i, tournament: @tournament} %>
       <% end %>
   </div>
   <div class="lines">
     <% for i in 0..3%>
-      <%= render partial:'tournaments/bracket-partials/lines', locals: {height: 'height:320px'}%>
+      <%= render partial:'tournaments/bracket-partials/lines', locals: {height: 'height:320px'} %>
         <% end %>
   </div>
-  <div class="round" id="round2">
-    <% for i in 0..3%>
-      <div class="match">
-        <div class="team">
-          <%= i %>
-        </div>
-        <div class="team">
-          <%= i %>
-        </div>
-      </div>
+  <div class="round">
+    <% for i in 8..11%>
+    <%= render partial:'tournaments/bracket-partials/match', locals: {stage: i, tournament: @tournament} %>
       <% end %>
   </div>
   <div class="lines">
     <% for i in 0..1%>
-      <%= render partial:'tournaments/bracket-partials/lines', locals: {height: 'height:500px'}%>
+      <%= render partial:'tournaments/bracket-partials/lines', locals: {height: 'height:500px'} %>
         <% end %>
   </div>
-  <div class="round" id="round3">
-    <% for i in 0..1%>
-      <div class="match">
-        <div class="team">
-          <%= i %>
-        </div>
-        <div class="team">
-          <%= i %>
-        </div>
-      </div>
+  <div class="round">
+    <% for i in 12..13%>
+    <%= render partial:'tournaments/bracket-partials/match', locals: {stage: i, tournament: @tournament} %>
       <% end %>
   </div>
   <div class="lines">
-    <%= render partial:'tournaments/bracket-partials/lines', locals: {height: 'height:860px'}%>
+    <%= render partial:'tournaments/bracket-partials/lines', locals: {height: 'height:860px'} %>
   </div>
-  <div class="round" id="round4">
-    <div class="match">
-      <div class="team">
-        <%= 0 %>
-      </div>
-      <div class="team">
-        <%= 0 %>
-      </div>
-    </div>
+  <div class="round">
+      <%= render partial:'tournaments/bracket-partials/match', locals: {stage: 14, tournament: @tournament} %>
   </div>
 </div>
