--- a/app/views/tournaments/bracket-partials/_match.html.erb
+++ b/app/views/tournaments/bracket-partials/_match.html.erb
@@ -1,18 +1,18 @@
 <div class="match" data-stage="<%= stage %>">
     <div class="team">
         <div class="team-name">
-            <div>TBD</div>
+            TBD
         </div>
         <div class="team-score">
-            <div>0</div>
+            0
         </div>
     </div>
     <div class="team">
         <div class="team-name">
-            <div>TBD</div>
+            TBD
         </div>
         <div class="team-score">
-            <div>0</div>
+            0
         </div>
     </div>
 </div>
