--- a/app/views/tournaments/start_tournament.js.erb
+++ b/app/views/tournaments/start_tournament.js.erb
@@ -1,4 +1,17 @@
-$.ajax({
-    type: "GET",
-    url: "<%= update_tournament_brackets_path(@tournament) %>"
-});
+if(<%= @already_started.present? %>){
+    if($("div.alert.alert-danger.alert-dismissible").length == 0){
+        $("main").prepend(
+            '<div class="alert alert-danger alert-dismissible">\
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">\
+                <span aria-hidden="true">&times;</span></button>\
+                Tournament already started\
+            </div>'
+         );
+    }
+    
+} else {
+    $.ajax({
+        type: "GET",
+        url: "<%= update_tournament_brackets_path(@tournament) %>"
+    });
+}
